--- a/index.html
+++ b/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Fylo data storage component</title>
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./images/favicon-32x32.png"
+        />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+        <link rel="stylesheet" href="Styles/main.css" />
+        <title>Frontend Mentor | Fylo data storage component</title>
+        <style></style>
+    </head>
+    <body>
+        <main>
+            <div class="logo card">
+                <img src="images/logo.svg" alt="Logo" />
+				<div class="btns">
+					<img src="images/icon-document.svg" alt="icon-document">
+					<img src="images/icon-folder.svg" alt="icon-folder">
+					<img src="images/icon-upload.svg" alt="icon-upload">
+				</div>
+            </div>
+            <div class="info card">
+                You've used <span class="bold">815 GB</span> of your storage 
+				<div class="slider">
+					<div class="fill"></div>
+				</div>
+                <div class="controls">
+                    <div class="min">0 GB</div>
+                    <div class="max">1000 GBs</div>
+                </div>
+                <div class="popup">
+                    <h1>185</h1>
+                    GB Left
+                </div>
+            </div>
+        </main>
 
-  You’ve used 815 GB of your storage
-
-  185 GB Left
-  
-  0 GB
-  1000 GB
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+        <footer>
+            <div class="attribution">
+                Challenge by
+                <a
+                    href="https://www.frontendmentor.io?ref=challenge"
+                    target="_blank"
+                    >Frontend Mentor</a
+                >. Coded by <a href="https://www.frontendmentor.io/profile/Judah1604">Judah1604</a>.
+            </div>
+        </footer>
+    </body>
 </html>
